# RAG-Based-AI-Assistant-for-Advanced-Data-Modeling-and-Question-Answering

./: .gitattributes  README.md  app.py  preprocess.py  pyproject.toml  rag_system.py
faiss.db/: index.faiss  index.pkl
gradio_cached_examples/14/: log.csv
rag_research/: main.py
rag_research/gradio_cached_examples/14/: log.csv
tests/: eval.csv  evaluate_rag.py  questions_and_answers.txt
