[tool.poetry]
name = "rag-research"
version = "0.1.0"
description = ""
authors = ["Edgar454 <mevaed4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain = "^0.3.1"
sentence-transformers = "^3.1.1"
llama-cpp-python = "^0.3.0"
bitsandbytes = "^0.44.0"
accelerate = "^0.34.2"
gradio = "^4.44.0"
faiss-cpu = "^1.8.0.post1"
pdfplumber = "^0.11.4"
langchain-experimental = "^0.3.1.post1"
langchain-community = "^0.3.1"
streamlit = "^1.38.0"
pypdf = "^5.0.0"
chromadb = "^0.5.9"
langchain-chroma = "^0.1.4"
nltk = "^3.9.1"
rouge = "^1.0.1"
unstructured-client = "^0.26.0"
pi-heif = "^0.18.0"
pdf2image = "^1.17.0"
unstructured = {extras = ["pdf"], version = "^0.15.13"}
iso639-lang = "^2.4.2"
onnx = "1.16.1"
protobuf = "3.20.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
